<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:background="@drawable/bg_register"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30sp"
            android:fontFamily="@font/poppins"
            android:gravity="center_horizontal"
            android:text="@string/judul_login"
            android:textColor="@color/pink"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:fontFamily="@font/poppins"
            android:textColor="@color/pink"
            android:textSize="17sp"/>
        <EditText
            android:id="@+id/edt_usernamelogin"
            android:layout_width="match_parent"
            android:textColor="@color/pink"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edtpassword"
            android:fontFamily="@font/poppins"
            android:textColor="@color/pink"
            android:textSize="17sp" />
        <EditText
            android:id="@+id/edt_passwordlogin"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:textColor="@color/pink"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_lohinlogin"
            android:text="@string/loginlogin"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:background="@color/pink"/>

        <Button
            android:id="@+id/btn_daftarlogin"
            android:text="@string/daftarlogin"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/pink"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/tv_lupa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:text="Lupa password?"
            android:fontFamily="@font/poppins"
            android:textColor="@color/teal_700" />
    </LinearLayout>

</LinearLayout>

